[gd_scene load_steps=9 format=3 uid="uid://c81nmx8wqs5j"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_vk0e2"]
[ext_resource type="Texture2D" uid="uid://4nyrhw7tmafw" path="res://sprites/Slime_sprite_sheet.png" id="2_vwk7p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_alk20"]
radius = 31.0
height = 75.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s36hf"]
radius = 24.0
height = 65.0

[sub_resource type="Animation" id="Animation_ty6q7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slime_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_s58jt"]
resource_name = "move_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slime_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 6, 5, 4]
}

[sub_resource type="Animation" id="Animation_7tk6q"]
resource_name = "move_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slime_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hp71a"]
_data = {
"RESET": SubResource("Animation_ty6q7"),
"move_left": SubResource("Animation_s58jt"),
"move_right": SubResource("Animation_7tk6q")
}

[node name="slime" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_vk0e2")
speed = 30

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_alk20")
debug_color = Color(0.721569, 0, 0.0470588, 0.505882)

[node name="slime_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_vwk7p")
hframes = 4
vframes = 2
frame = 1

[node name="slime_hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_s36hf")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hp71a")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="down" type="RayCast2D" parent="."]
collision_mask = 4

[node name="up" type="RayCast2D" parent="."]
target_position = Vector2(0, -50)
collision_mask = 4

[node name="left" type="RayCast2D" parent="."]
target_position = Vector2(-50, 0)
collision_mask = 4

[node name="right" type="RayCast2D" parent="."]
target_position = Vector2(50, 0)
collision_mask = 4

[node name="agro_clock" type="RayCast2D" parent="."]
target_position = Vector2(400, 0)

[node name="agro_count_clock" type="RayCast2D" parent="."]
target_position = Vector2(400, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
